corrected the errors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.username=${SQL_USERNAME}
 spring.datasource.password=${SQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernat.dialect.MYSQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MYSQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
